--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "nodemon index.js"
+    "start": "nodemon backend/server/index.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,7 +19,6 @@
     "icons": "^1.0.0",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
@@ -35,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "nodemon": "^3.1.9",
     "vite": "^6.2.0"
   }
 }
