Created database connection to MongoDB, updated index.js with connection

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=6000
+DATABASE=mongodb+srv://contactApp:03S58QhXeguNjpQe@cluster0.7ufr3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
